[project]
name = "pyphaser"
version = "1.0.1"
description = ""
authors = [
    {name = "Ralph Brecheisen", email = "ralph.brecheisen@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arcade>=3.3.2",
]

[tool.poetry]
packages = [{include = "pyphaser", from = "src"}]

[tool.poetry.scripts]
pyphaser = "pyphaser.app:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
