[project]
name = "pyphaser"
version = "1.0.2"
description = ""
authors = [
    {name = "Ralph Brecheisen", email = "ralph.brecheisen@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arcade>=3.3.2",
    "pygame>=2.6.1",
]

[tool.poetry]
packages = [{include = "pyphaser", from = "src"}]

[tool.poetry.scripts]
pyphaser-arcade = "pyphaser.arcade.app:main"
pyphaser-pg = "pyphaser.pg.app:main"
pyphaser-pg-compleet = "pyphaser.pg.compleet.app:main"
pyphaser-pg-1 = "pyphaser.pg.app-stap1:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
